Tue May 19 06:52:05  2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Countdown_Time.cpp (stop):
          Make sure elapsed_time is equal or bigger then zero to prevent
          expanding the max_wait_time at the moment the system time
          has been changed. Thanks to Michael Guntli
          <michael dot guntli at leica-geosystems dot com> for reporting this.

Tue May 19 06:50:05  2009  Marcel Smit  <msmit@remedy.nl>

        * ace/config-win32-cegcc.h
          Removed compiler flags since they are now in platform_cegcc.GNU.

Tue May 19 06:31:05  2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_cegcc.GNU:
          Pass mandatory compiler flags from here

Tue May 19 06:17:05  2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/fuzz.pl:
          Added fileno to ACE_OS check

Tue May 19 06:14:05  2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_stdio.h:
        * ace/OS_NS_stdio.inl:
          Added fileno wrapper which returns ACE_HANDLE. The CEGCC developers
          fixed their header files

        * ace/ETCL/ETCL_l.cpp:
        * ace/ETCL/ETCL_l.cpp.diff
          Use ACE_OS::fileno

        * ace/os_include/os_unistd.h:
          Removed obsolete casts for WinCE

        * ace/OS_NS_Thread.inl:
          Const changes

Mon May 18 19:58:35 UTC 2009  Steve Huston  <shuston@riverace.com>

        * ace/config-aix-5.x.h: Add explicit instantiation for the
          ACE_EXPORT_SINGLETON_DECLARE - the compiler needs to be forced to
          generate the template code even if there's no use of it. Fixes
          unsats for ACE_Utils::UUID_Generator singleton.
          Also removed settings for AIX Visual Age, etc. earlier than V6.

Mon May 18 17:11:28 UTC 2009  Steve Huston  <shuston@riverace.com>

        * ace/UUID.cpp: Reverted:
          Mon May 18 15:33:17 UTC 2009  Steve Huston  <shuston@riverace.com>
          It breaks g++ builds. Working on another solution...
