@@ -1,3 +1,8 @@
+Tue May 19 07:13:05  2009  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ace/Mem_Map/IO-tests/IO_Test.cpp:
+          Use ACE_OS::fileno
+
 Tue May 19 06:52:05  2009  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ace/Countdown_Time.cpp (stop):
